# skill-academy-proyect

./: README.md
backend/: .gitignore  README.md  app.py  pyproject.toml
backend/models/: models.py
backend/repository/: user_repository.py
backend/schemas/: schemas.py
backend/services/: user_service.py
